--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,8 @@ dependencies {
     compile('io.reactivex.rxjava2:rxjava:2.0.8') {
         exclude group: 'com.android.support', module: 'appcompat-v7'
     }
-    compile('com.jakewharton.rxrelay2:rxrelay:2.0.0') {
+    compile('io.reactivex.rxjava2:rxandroid:2.0.1') {
         exclude group: 'com.android.support', module: 'appcompat-v7'
-        exclude group: 'com.google.code.findbugs', module: 'jsr305'
-        exclude group: 'com.android.support', module: 'support-annotations'
     }
     compile "com.squareup.okhttp3:okhttp:3.8.1"
 }
