--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
+    api "com.android.support:recyclerview-v7:27.1.1"
     compile('io.reactivex.rxjava2:rxjava:2.0.8') {
         exclude group: 'com.android.support', module: 'appcompat-v7'
     }
